changed layout and stylesheets

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
 
-<img src= "http://cmster.com/media/oRfbxQMQBOo6fpG99CwXLE73VVnRTdbqI1Q8rLsayyFswtOeogh4WN1kTmGcm46h.jpg">
+<img src= "http://cdn1.gbase.com/usercontent/gear/3339904/p1_uonpkp5wq_ss.jpg">
 
 <p>
 
